--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <script src="./js/jquery.min.js"></script>
+    <!-- <script src="./js/jquery.min.js"></script>
     <script src="./js/page-scripts.js"></script>
-    <script src="./js/apexcharts.min.js"></script>
+    <script src="./js/apexcharts.min.js"></script> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
